--- a/src/views/pokemon-cards/PokemonCardsView.scss
+++ b/src/views/pokemon-cards/PokemonCardsView.scss
@@ -8,4 +8,25 @@
   .error-message {
     margin: 20px 0;
   }
+
+  .card-image-container {
+    position: relative;
+
+    &.out-of-stock {
+      opacity: 0.5;
+    }
+
+    .out-of-stock-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: rgba(255, 0, 0, 0.7);
+      color: white;
+      padding: 5px 10px;
+      border-radius: 4px;
+      font-weight: bold;
+      z-index: 1;
+    }
+  }
 }
